log/build_2021-04-21_14-45-58/pickplace/stderr.log
  File "/home/gy/Omron_TM_ROS2/install/pickplace/lib/python3.8/site-packages/pickplace/teach_setup.py", line 12
    from get_package_share_directory('pickplace') + '/pickplace/pp_library' import Modbus, Transform, Script
                                    ^
SyntaxError: invalid syntax

